# bs58-fixed

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: borrowed.rs  lib.rs  owned.rs
wasm/: .gitignore
wasm/test/: Cargo.toml
wasm/test/consumer/: Cargo.toml  Makefile  README.md
wasm/test/consumer/src/: lib.rs
wasm/test/ts/: README.md  index.ts  package.json
wasm/test/ts/test/: all_ones.test.ts
wasm/wasm/: Cargo.toml  README.md
wasm/wasm/src/: lib.rs  serde.rs  wasm_abi.rs
