[package]
name = "bs58-fixed"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
bs58 = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true, features = ["std"] }
proptest = { workspace = true }
